SITE Added standard jarachis site and scmpublisher plugin configurations